hphp/hack/test/typecheck/inout/bad_inout_decl_memoize2.php
<?hh

final class C {
  <<__Memoize>>
  public function bar(mixed $x, inout mixed $y, mixed $z): void {}
}
